--- a/frontend/src/components/BlogPage_Layout/BlogPage_Layout.css
+++ b/frontend/src/components/BlogPage_Layout/BlogPage_Layout.css
@@ -1,3 +1,51 @@
 .blog-page-layout-wrapper{
-    margin-top: 10px;
+    margin-top: 2rem;
+}
+.blog-page-layout-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+}
+.blog-page-layout-info .blog-page-layout-heading{
+    color: white;
+    background: var(--featured-bg);
+    padding: 10px 15px;
+    border-radius: 50px;
+}
+.blog-page-layout-info .blog-page-layout-description{
+    text-align: center;
+    font-size: 14px;
+    color: #6e6e73;
+}
+.blog-container{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 2.5rem;
+    animation: var(--fadeIn);
+}
+:where(.blog-container) .blog-container-img{
+    width: min(auto, 300px);
+    height: min(auto, 300px);
+    border-radius: 12px;
+    overflow: hidden;
+}
+.blog-container-img > img{
+    border-radius: 12px;
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+    object-position: center;
+}
+.blog-container-content{
+    display: grid;
+    row-gap: .8rem;
+}
+@media (width < 767px) {
+    .blog-container{
+        flex-direction: column;
+    }
 }
