--- a/frontend/src/components/Categories/Categories.css
+++ b/frontend/src/components/Categories/Categories.css
@@ -1,10 +1,12 @@
 .categories-box{
     display: flex;
+    justify-content: center;
     gap: 10px;
     overflow-y: hidden;
     overflow-x: scroll;
     mask: linear-gradient(90deg, white 60%, transparent 100%);
     -webkit-mask-image: linear-gradient(90deg, white 60%, transparent 100%);
+    padding-right: 3rem;
 }
 .categories-box .category-btn{
     all: unset;
@@ -26,6 +28,6 @@
 }
 @media (width <1067px ){
     .categories-box{
-        justify-content: start;
+        justify-content: start !important;
     }
 }
