--- a/frontend/src/components/ContactPage_Layout/ContactPageLayout.css
+++ b/frontend/src/components/ContactPage_Layout/ContactPageLayout.css
@@ -7,7 +7,7 @@
     margin: auto;
     margin-top: 30px;
     margin-bottom: 60px;
-    animation: var(--fadeIn);
+    animation: var(--transform);
 }
 .contact-page-inputs{
     display: flex;
