fixed Grid Template && completed Project section

--- a/frontend/src/components/ProjectPage_Layout/ProjectPageLayout.css
+++ b/frontend/src/components/ProjectPage_Layout/ProjectPageLayout.css
@@ -3,3 +3,8 @@
     animation: var(--transform);
     margin-bottom: 3rem;
 }
+.no-project-found{
+    display: grid;
+    place-items: center;
+    margin-block: 3.5rem;
+}
