--- a/frontend/src/components/AboutPage_Layout/AboutProjectsSection/AboutProjectSection.css
+++ b/frontend/src/components/AboutPage_Layout/AboutProjectsSection/AboutProjectSection.css
@@ -3,3 +3,8 @@
     margin-bottom: 3rem;
     animation: var(--fadeIn);
 }
+.about-sec-btn-wrapper{
+    display: flex;
+    justify-content: center;
+    margin-top: 2.5rem;
+}
