--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -67,6 +67,30 @@ body{
   padding-top: 80px;
 }
 
+.skeleton{
+  position: relative;
+}
+.skeleton::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background: linear-gradient(90deg, #eee, #dedede, #eee);
+  background-size: 200%;
+  animation: skeleton .7s infinite linear reverse;
+}
+
+@keyframes skeleton {
+  0%{
+    background-position: -100% 0;
+  }
+  100%{
+    background-position: 100% 0;
+  }
+}
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
