--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,6 +69,7 @@ body{
 
 .skeleton{
   position: relative;
+  border-radius: 4px;
 }
 .skeleton::before{
   content: '';
@@ -78,6 +79,8 @@ body{
   width: 100%;
   height: 100%;
   z-index: 10;
+  padding-block: 20px;
+  border-radius: 4px;
   background: linear-gradient(90deg, #eee, #dedede, #eee);
   background-size: 200%;
   animation: skeleton .7s infinite linear reverse;
