--- a/frontend/src/components/GridTemplate/GridToggler/GridToggler.css
+++ b/frontend/src/components/GridTemplate/GridToggler/GridToggler.css
@@ -12,6 +12,23 @@
   font-weight: 300;
   font-size: 35px;
   color: var(--text-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.grid-toggler h1 > span{
+  background-color: var(--text-color);
+  color: white;
+  font-size: 12px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 50%;
+  padding: 5px;
 }
 
 .grid-toggler-btn {
