--- a/frontend/src/components/HomePage_Layout/FeaturedBlogPosts/FeaturedBlogPosts.css
+++ b/frontend/src/components/HomePage_Layout/FeaturedBlogPosts/FeaturedBlogPosts.css
@@ -1,37 +1,52 @@
-.f-post-wrapper{
-    background: var(--featured-bg);
-    position: absolute;
-    left: 0;
-    width: 100%;
-    max-height: 100%;
-    height: fit-content;
-    padding: 50px 30px 50px 80px;
-    display: flex;
-    gap: 20px;
-    margin-top: 50px;
-    overflow-x: scroll;
-    animation: var(--fadeIn);
+.f-post-wrapper {
+  background: var(--featured-bg);
+  position: absolute;
+  left: 0;
+  width: 100%;
+  max-height: 100%;
+  height: fit-content;
+  margin-top: 50px;
+  animation: var(--fadeIn);
+}
+.f-blog-sec-info {
+  margin-top: 2.5rem;
+  text-align: center;
+  white-space: nowrap;
+}
+.f-blog-sec-info h1 {
+  color: white;
+}
+.f-blog-content {
+  padding: 40px 30px 40px 80px;
+  overflow-x: scroll;
+  display: flex;
+  gap: 20px;
 }
 .f-post-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
 }
-.f-post-btn .f-post-view-more-btn{
-    color: white;
-    background: var(--link-color);
-    padding: 20px 21px;
-    font-size: 13px;
-    border-radius: 50%;
-    transition: var(--transition);
+.f-post-btn .f-post-view-more-btn {
+  color: white;
+  background: var(--link-color);
+  padding: 20px 15px;
+  font-size: 13px;
+  border-radius: 50%;
+  transition: var(--transition);
 }
-.f-post-view-more-btn:hover{
-    background: var(--link-hover);
+.f-post-view-more-btn:hover {
+  background: var(--link-hover);
 }
 @media (width <767px) {
-    .f-post-wrapper{
-    padding: 50px 20px 40px 26px;
+  .f-post-wrapper {
     margin-top: 50px;
-}
+  }
+  .f-blog-sec-info h1{
+    font-size: 1.6rem;
+  }
+  .f-blog-content {
+    padding: 30px 20px 40px 26px;
+  }
 }
