--- a/admin/src/components/Navbar/Navbar.css
+++ b/admin/src/components/Navbar/Navbar.css
@@ -23,8 +23,11 @@
     transition: all .3s ease;
 }
 
-.logo-area h1 {
+.logo-area a {
     user-select: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
 
 .logo-area svg:active{
@@ -43,4 +46,10 @@
     object-fit: cover;
     object-position: center;
     user-select: none;
+}
+
+@media (width < 767px) {
+    .navbar {
+        padding: 10px 12px;
+    }
 }
